--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ollek",
   "private": true,
+  "homepage": "https://schmitz-raphael.github.io/Ollek",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -24,6 +25,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
   }
